--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <title>Broadway Design</title>
-  </head>
-  <body>
+  	<head>
+    	<meta charset="utf-8">
+    	<link rel="stylesheet" href="css/style.css" type="text/css">
+    	<title>Broadway Design</title>
+  	</head>
+	<body>
     <div class="broadway">
       <h1>Broadway Design</h1>
       <nav>
@@ -39,15 +39,13 @@
 	        	<p>Email: test@example.com</p>
 	        	<p>Twitter: @test</p>
 	</div> <!-- main div -->
-	<div class="footer">
+	<nav class="footer">
 		<p>&copy Broadway 2016</p>
-		<nav>
-			<a href="#">Home</a>
-			<a href="#process">About</a>
-			<a href="#portfolio">Work</a>
-			<a href="#team">Team</a>
-			<a href="#contact">Contact</a>
-		</nav>
-	</div>
-  </body>
+		<a href="#">Home</a>
+		<a href="#process">About</a>
+		<a href="#portfolio">Work</a>
+		<a href="#team">Team</a>
+		<a href="#contact">Contact</a>
+	</nav>
+	</body>
 </html>
